# IrodoriWhatToDo

./: .gitignore  CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml
docs/: index.html  script.js  style.css
src/: __init__.py  lesson.py  preprocess.py  site.py
src/resources/: __init__.py  claude_input.json  claude_output.json  questionnaire.html.j2  script.js.j2
